# juliandate

./: .gitlab-ci.yml  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/arduino/juliandate_ex/: juliandate_ex.ino
examples/cmake/: juliandate_ex.cc
src/: juliandate.cpp  juliandate.h
tests/: juliandate_test.cc
